# foobar_db

./: Cargo.toml  README.md  rustfmt.toml  todo.md
assets/: banner.txt
src/: lib.rs
src/db/: db.rs  lru.rs  mod.rs  storage.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/macros/src/tests/: test.rs
src/protocal/: command.rs  mod.rs  parser.rs  parser_test.rs  resp_test.rs
src/server/: client.rs  server.rs
tests/: client_tests.rs
