[package]
name = "foobar_db"
version = "0.1.0"
edition = "2021"
authors = ["HanLin Chai <take3812@gmail.com>"]
description = "A Rust port of the Redis"
license = "MIT"

[[bin]]
name = "foobar_db"
path = "src/bin/server.rs"

[env]
RUST_LOG = "debug"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
macros = { path = "./src/macros" }
dashmap = "6.1.0"
anyhow = "1.0.93"
bytes = "1.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
test-case = "3.1"

[profile.release]
# 优化级别 0-3, 3 是最高级别优化
opt-level = 3

# 启用 LTO (Link Time Optimization)
lto = true

# 启用并行编译
codegen-units = 1

# 开启 debug 信息（如果需要的话）
debug = false

# 启用 panic=abort 可以减少二进制大小
panic = "abort"

# 去除符号信息，减少文件大小
strip = true

# 优化依赖项
[profile.release.package."*"]
opt-level = 3
