[package]
name = "foobar_db"
version = "0.0.1"
edition = "2021"
authors = ["HanLin Chai <take3812@gmail.com>"]
description = "FoobarDB is an in-memory database implemented in Rust that supports the RESP protocol. "
repository = "https://github.com/daydaydrunk/foobar_db"
documentation = "https://docs.rs/stream_resp/latest/foobar_db/"
license = "MIT"
build = "build.rs"

[[bin]]
name = "foobar_db"
path = "src/bin/server.rs"

[env]
RUST_LOG = "debug"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
dashmap = "6.1.0"
anyhow = "1.0.93"
bytes = "1.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
num_cpus = "1.13.0"
socket2 = "0.5"
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }

[dev-dependencies]
pretty_assertions = "1.4"
test-case = "3.1"

[build-dependencies]
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3
